--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RaspberryPi stats</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-sky-800 h-screen min-w-screen text-white">
+    <div id="root" class="w-full h-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
