--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RaspberryPi stats</title>
   </head>
-  <body class="bg-sky-800 h-screen min-w-screen text-white">
+  <body class="bg-[#01161E] h-screen min-w-screen text-white">
     <div id="root" class="w-full h-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
